<resources>
    <string name="app_name">StudyBuddy</string>
    <string name="app_motto">For measurable success</string>
    <string name="user_name">name</string>
    <string name="user_surname">surname</string>
    <string name="user_profession">profession</string>
    <string name="user_email">email</string>
    <string name="user_password">password</string>
    <string name="user_confirm_password">confirm password</string>
    <string name="register_button">register</string>
    <string name="login_button">LOGIN</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="register_button2">Register</string>
    <string name="newSessionTitle">Start New Session</string>
    <string name="session_label">Label</string>
    <string name="number_of_sessions">Number of sessions</string>
    <string name="length_of_session">Length of one session</string>
    <string name="focus_time">Focus</string>
    <string name="break_time">Break</string>
    <string name="next_button">Next</string>
    <string name="longer_break_checkmark">Include longer break</string>
    <string name="challenge_friend_checkbox">Challenge a friend</string>
    <string name="profile">Profile</string>
    <string name="code">#324902</string>
    <string name="username">kuraltpetra00</string>
    <string name="username_title">Username</string>
    <string name="profession">Student</string>
    <string name="profession_title">Profession</string>
    <string name="email_title">Email</string>
    <string name="email">petrakuralt@gmail.com</string>
    <string name="studyTime_title">Study time</string>
    <string name="focusTime_title">Focus time</string>
    <string name="focusTime">53h 30min</string>
    <string name="numberSessions_title">Number of sessions</string>
    <string name="numberSessions">82</string>
    <string name="profileName">Petra Kuralt</string>
    <string name="frieds_title">Friends</string>
    <string name="friend1">Mirko Markocevic</string>
    <string name="friend2">Matic Merela</string>
    <string name="odjava">Odjava</string>
    <string name="history">History</string>
    <string name="session1_title">Study</string>
    <string name="length">Length: 2:00h</string>
    <string name="intervals">Intervals: 5</string>
    <string name="includeLongerBreak">Longer break included: YES</string>
    <string name="challenge_friend">With: MIRKO MARKOCEVIC</string>
    <string name="more">MORE</string>
    <string name="logOut">Log out</string>
    <string name="fullName">Petra Kuralt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>