<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_bg">

    <!--  My profile -->
    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/nexa_bold"
        android:text="-"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Code -->
    <TextView
        android:id="@+id/Code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nexa_bold"
        android:gravity="right"
        android:layout_marginRight="25dp"
        android:text="#000000"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-20dp"
        tools:layout_editor_absoluteY="83dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <!-- Profile image -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Code"
        tools:srcCompat="@tools:sample/avatars" />

    <!-- Username -->

    <TextView
        android:id="@+id/professionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/card_bg_top"
        android:elevation="2dp"
        android:fontFamily="@font/nexa_regular"
        android:paddingStart="25dp"
        android:layout_marginHorizontal="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="3dp"
        android:text="Username"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/profession"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/card_bg_bottom"
        android:elevation="2dp"
        android:fontFamily="@font/nexa_light"
        android:paddingStart="25dp"
        android:paddingBottom="7dp"
        android:text="-"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/professionTitle" />

    <!-- Email -->
    <TextView
        android:id="@+id/emailTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/card_bg_top"
        android:elevation="2dp"
        android:fontFamily="@font/nexa_regular"
        android:paddingStart="25dp"
        android:layout_marginHorizontal="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="3dp"
        android:text="@string/email_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profession" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/card_bg_bottom"
        android:elevation="2dp"
        android:fontFamily="@font/nexa_light"
        android:paddingStart="25dp"
        android:paddingBottom="7dp"
        android:text="-"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTitle" />

    <!--  Focus Time -->
    <TextView
        android:id="@+id/focusTimeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="225dp"
        android:background="@drawable/card_bg_top"
        android:elevation="2dp"
        android:fontFamily="@font/nexa_regular"
        android:paddingStart="25dp"
        android:paddingTop="20dp"
        android:paddingBottom="3dp"
        android:text="Total focus time"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/numberSessionsTitle"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/focusTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="225dp"
        android:background="@drawable/card_bg_bottom"
        android:elevation="2dp"
        android:fontFamily="@font/nexa_light"
        android:text="0h"
        android:textColor="@color/white"
        android:inputType="number"
        android:paddingStart="25dp"
        android:paddingBottom="7dp"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/numberSessions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/focusTimeTitle" />

    <!--  Number of sessions  -->
    <TextView
        android:id="@+id/numberSessionsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="215dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/card_bg_top"
        android:elevation="2dp"
        android:fontFamily="@font/nexa_regular"
        android:paddingStart="25dp"
        android:paddingTop="20dp"
        android:paddingBottom="3dp"
        android:text="Num. of sessions"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/numberSessions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="215dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/card_bg_bottom"
        android:elevation="2dp"
        android:fontFamily="@font/nexa_light"
        android:text="0"
        android:textColor="@color/white"
        android:paddingStart="25dp"
        android:paddingBottom="7dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/focusTime"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberSessionsTitle" />

    <!-- Friends -->
    <TextView
        android:id="@+id/friendsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/card_bg_top"
        android:elevation="2dp"
        android:fontFamily="@font/nexa_regular"
        android:paddingStart="25dp"
        android:layout_marginHorizontal="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/frieds_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberSessions" />

    <TextView
        android:id="@+id/friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:elevation="2dp"
        android:fontFamily="@font/nexa_light"
        android:textColor="@color/grey_card"
        android:text="-"
        android:paddingStart="25dp"
        android:paddingBottom="7dp"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friendsTitle" />

    <Button
        android:id="@+id/logOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logOut"
        android:layout_marginRight="25dp"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friend" />


</androidx.constraintlayout.widget.ConstraintLayout>